# Coursework_4_NEW

./: README.md  main.py  pyproject.toml
data/: vacancies_hh
src/: exceptions.py  file_saver.py  fnc.py  fnc_color.py  fnc_sorted.py  headhunter_api.py  vacancy.py
tests/: conftest.py  test_exceptions.py  test_file_saver.py  test_fnc_color.py  test_fnc_sorted.py  test_headhunter_api.py  test_vacancy.py
