[tool.poetry]
name = "coursework-4-new"
version = "0.1.0"
description = "курсовая работа № 4 про курсу backend-разработчик от онлайн школы SKYPRO"
authors = ["Anton Gromov <seed14112@yaandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
